feat: 任务下发界面布局

--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
 	"TrailingCooma": "all",
 	"bracketSpacing": true,
 	"arrowParens": "always",
-	"jsxBracketSameLine": true
+	"jsxBracketSameLine": true,
+	"singleAttributePerLine": true
 }
