--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@vitejs/plugin-vue-jsx": "^3.0.1",
 		"element-plus": "^2.3.3",
 		"pinia": "^2.0.34",
 		"vue": "^3.2.45",
