--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@types/node": "^18.15.11",
 		"@vitejs/plugin-vue": "^4.0.0",
+		"echarts": "^5.4.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vue-tsc": "^1.0.11"
