--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vue-tsc && vite build",
+		"start-bff": "ts-node /src/bff/index.ts",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@types/express": "^4.17.17",
 		"@vitejs/plugin-vue-jsx": "^3.0.1",
 		"axios": "^1.3.5",
 		"echarts": "^5.4.2",
 		"element-plus": "^2.3.3",
+		"express": "^4.18.2",
 		"pinia": "^2.0.34",
+		"ts-node": "^10.9.1",
+		"ts-node-dev": "^2.0.0",
 		"vue": "^3.2.45",
 		"vue-router": "^4.1.6"
 	},
@@ -21,7 +26,8 @@
 		"@types/node": "^18.15.11",
 		"@vitejs/plugin-vue": "^4.0.0",
 		"echarts": "^5.4.2",
-		"typescript": "^4.9.3",
+		"nodemon": "^2.0.22",
+		"typescript": "^4.9.5",
 		"vite": "^4.0.0",
 		"vue-tsc": "^1.0.11"
 	}
